<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.lobsangmonlam.dictionary.AppListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_margin"
        >
    <org.ironrabbit.type.CustomTypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large_text"
        android:textSize="16sp"

        />

        <!-- start app -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        >

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/zom512"
            android:layout_marginRight="6dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top"
            >
            <org.ironrabbit.type.CustomTypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_zom_title"
                android:textSize="20sp"

                />

            <org.ironrabbit.type.CustomTypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_zom_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_install_app"
                    android:onClick="installZomApp"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_learn_more"
                    android:onClick="learnMoreZomApp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <!-- end app -->
        <!-- start app -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/kbicon"
                android:layout_marginRight="6dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="top"
                >
                <org.ironrabbit.type.CustomTypefaceTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_kb_title"
                    android:textSize="20sp"

                    />

                <org.ironrabbit.type.CustomTypefaceTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_kb_desc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    >
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_install_app"
                        android:onClick="installKbApp"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_learn_more"
                        android:onClick="learnMoreKbApp"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- end app -->

        <!-- start app -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            >

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/taicon"
                android:layout_marginRight="6dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="top"
                >
                <org.ironrabbit.type.CustomTypefaceTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_ta_title"
                    android:textSize="20sp"

                    />

                <org.ironrabbit.type.CustomTypefaceTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_ta_desc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp"
                    >
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_install_app"
                        android:onClick="installTaApp"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_learn_more"
                        android:onClick="learnMoreTaApp"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- end app -->


        <org.ironrabbit.type.CustomTypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text=""
            android:textSize="16sp"

            />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
